[build-system]
requires = ["setuptools", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"
# https://docs.astral.sh/uv/concepts/projects/config/#build-systems
# https://docs.astral.sh/uv/concepts/projects/config/#build-isolation

[project]
name = "hamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'smplx==0.1.28',
    'detectron2 @ git+https://github.com/facebookresearch/detectron2',
    "chumpy @ git+https://github.com/mhyatt000/chumpy",
    'mmcv==1.3.9',
    "webdataset[all]>=0.2.111",
    "colorama>=0.4.6",
    "mmpose==0.24.0",
    "gdown>=5.2.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pyrender>=0.1.45",
    "pytorch-lightning>=2.5.1.post0",
    "scikit-image>=0.25.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "yacs>=0.1.8",
    "timm>=1.0.15",
    "einops>=0.8.1",
    "pandas>=2.2.3",
    "hydra-core[all]>=1.3.2",
    "hydra-submitit-launcher[all]>=1.2.0",
    "hydra-colorlog[all]>=1.2.0",
    "pyrootutils[all]>=1.0.4",
    "rich[all]>=14.0.0",
    "xtcocotools",
    "tyro>=0.9.20",
]

[project.optional-dependencies]
server = [
    "flax>=0.10.6",
    "jax>=0.6.0",
    "rich>=14.0.0",
    "tyro>=0.9.19",
    "webpolicy",
]

[tool.uv]
no-build-isolation-package = ["xtcocotools", "detectron2"]

[tool.uv.sources]
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
mmpose = { path = "third-party/ViTPose", editable = true }
xtcocotools = { git = "https://github.com/mhyatt000/xtcocoapi" }

